--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
-
 {
   "scripts": {
-  "start": "node app",     
-  "dev": "nodemon src/server.ts",    
-  "build": "tsc"                     
-},
+    "start": "node app",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc"
+  },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
@@ -13,8 +12,10 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2"
   }
 }
